--- a/common/base.yaml
+++ b/common/base.yaml
@@ -12,6 +12,24 @@ esphome:
 # Enable logging
 logger:
 
+color:
+  - id: color_blue
+    red: 0%
+    green: 0%
+    blue: 100%
+  - id: color_red
+    red: 100%
+    green: 0%
+    blue: 0%
+  - id: color_white
+    red: 100%
+    green: 100%
+    blue: 100%
+  - id: color_black
+    red: 0%
+    green: 0%
+    blue: 0%
+
 # Download Roboto font from https://fonts.google.com/specimen/Roboto
 font:
   - file: "fonts/Roboto-Medium.ttf"
