--- a/common/base.yaml
+++ b/common/base.yaml
@@ -30,17 +30,16 @@ color:
     green: 0%
     blue: 0%
 
-# Download Roboto font from https://fonts.google.com/specimen/Roboto
 font:
-  - file: "fonts/Roboto-Medium.ttf"
+  - file: "gfonts://Roboto@medium"
     id: font_roboto
     size: 22
-  - file: "fonts/Roboto-Medium.ttf"
+  - file: "gfonts://Roboto@medium"
     id: font_roboto_big
     size: 44
-  - file: "fonts/Roboto-Medium.ttf"
+  - file: "gfonts://Roboto@medium"
     id: font_roboto_10
     size: 10
-  - file: "fonts/Roboto-Medium.ttf"
+  - file: "gfonts://Roboto@medium"
     id: font_roboto_20
     size: 20
